--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,19 @@
 <resources>
-    <string name="app_name">News App</string>
+    <string name="app_name">News Eyepax</string>
+    <string name="eyepax_news">Eyepax News</string>
+    <string name="login">login</string>
+    <string name="register">register</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="username">username</string>
+    <string name="first_name">First name</string>
+    <string name="last_name">Last name</string>
+    <string name="password">Password</string>
+    <string name="retype_password">Retype password</string>
+    <string name="email_address">Email</string>
+    <string name="title_activity_dashboard">DashboardActivity</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="latest_news">Latest News</string>
 </resources>
