--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,6 @@
     <string name="Montserrat_SemiBold">Montserrat-SemiBold</string>
     <string name="USER_NOT_FOUND">User not found.</string>
     <string name="profile">Profile</string>
+    <string name="lblUsername">Username</string>
+    <string name="lblPassword">Password</string>
 </resources>
