paggination and datastore fixes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="lblPassword">Password</string>
     <string name="notification_logo" />
     <string name="n_a">N/A</string>
+    <string name="logout">Logout</string>
 </resources>
