--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="notification_logo" />
     <string name="n_a">N/A</string>
     <string name="logout">Logout</string>
+    <string name="see_more">See more</string>
 </resources>
